about.html: change alignment of table & button

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
       </g>
   </svg>
 
-  <p class="r-align"><a href="#" class="button">Download my CV</a></p>
+  <p><a href="#" class="button">Download my CV</a></p>
 
       <table>
         <caption>Places I've Lived</caption>
