contact.html: comment out form

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="contact__item">
-          <p class="small">* = Required</p>
+          <!--<p class="small">* = Required</p>
           <form action="" method="post" id="contact-form">
 
             <label for="name" class="standard-label">*Name: </label>
@@ -58,7 +58,7 @@
             <textarea id="message" name="message" placeholder="Message" maxlength="240" required></textarea><br><br>
 
             <button type="submit">Submit</button>
-          </form>
+          </form>-->
         </div>
       </div>
     </div>
