work.html: comment out projects grid

--- a/work.html
+++ b/work.html
@@ -27,7 +27,8 @@
 
     <section id="main-content">
       <h1>My Work</h1>
-      <div class="grid-work">
+      <p>Projects to be added soon, please check back at a later date. Thank you.</p>
+      <!--<div class="grid-work">
         <div class="grid-work__item">
           <h2>Project Name 1</h2>
           <img src="http://www.placepuppy.net/400/250">
@@ -76,7 +77,7 @@
           <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
           <p><a href="#">View project</a>.</p>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <footer>
