--- a/work.html
+++ b/work.html
@@ -1,95 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Work | Sue Donaldson Portfolio</title>
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Overpass:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-  </head>
 
-  <body>
-    <header>
-      <div id="logo" class="header__item">
-        <a href="index.html"><img src="images/logo_sue-donaldson.png" alt="Sue Donaldson"></a>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Work | Sue Donaldson Portfolio</title>
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Overpass:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.production.css">
+</head>
+
+<body>
+  <header>
+    <div id="logo" class="header__item">
+      <a href="index.html"><img src="images/logo_sue-donaldson.png" alt="Sue Donaldson"></a>
+    </div>
+    <nav class="header__item">
+      <ul role="menubar">
+        <li role="presentation"><a href="index.html" role="menuitem">Home</a></li>
+        <li role="presentation"><a href="about.html" role="menuitem">About Me</a></li>
+        <li role="presentation"><a href="work.html" role="menuitem" class="current">My Work</a></li>
+        <li role="presentation"><a href="contact.html" role="menuitem">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="main-content">
+    <h1>My Work</h1>
+    <p>More projects to be added soon, please check back at a later date. Thank you.</p>
+    <div class="grid-work">
+      <div class="grid-work__item">
+        <h2>movie_api</h2>
+        <img src="images/screenshot-movie-api.png">
+        <p>A Movie API built using the MERN (MongoDB, Express, React, and Node.js) stack and will allow users to access
+          information about a variety of movies, directors, ratings, and genres. Users are able to sign up, update their
+          personal information, and create a list of their favorite movies.</p>
+        <p><a href="https://github.com/Su3D/movie_api">code</a> || <a
+            href="https://cf-movie-list-api.herokuapp.com/">website</a></p>
       </div>
-      <nav class="header__item">
-        <ul role="menubar">
-          <li role="presentation"><a href="index.html" role="menuitem">Home</a></li>
-          <li role="presentation"><a href="about.html" role="menuitem">About Me</a></li>
-          <li role="presentation"><a href="work.html" role="menuitem" class="current">My Work</a></li>
-          <li role="presentation"><a href="contact.html" role="menuitem">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <section id="main-content">
-      <h1>My Work</h1>
-      <p>Projects to be added soon, please check back at a later date. Thank you.</p>
-      <!--<div class="grid-work">
-        <div class="grid-work__item">
-          <h2>Project Name 1</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 2</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 3</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
+      <div class="grid-work__item">
+        <h2>quiz-app</h2>
+        <img src="images/screenshot-quiz-app.png">
+        <p>Small Quiz app built with Angular to test knowledge of Maths and French.</p>
+        <p><a href="https://github.com/Su3D/quiz-app">code</a> || <a href="https://su3d.github.io/quiz-app/">website</a>
+        </p>
+      </div>
+      <div class="grid-work__item">
+        <h2>todo-app</h2>
+        <img src="images/screenshot-todo-app.png">
+        <p>Small ToDo List app created with Vue.js that allows users to add, remove, edit, and mark as complete to-do
+          list items.</p>
+        <p><a href="https://github.com/Su3D/todo-app">code</a> || <a href="https://su3d.github.io/todo-app/">website</a>
+        </p>
+      </div>
+      <!--<div class="grid-work__item">
           <h2>Project Name 4</h2>
           <img src="http://www.placepuppy.net/400/250">
           <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
           <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 5</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 6</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 7</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-        <div class="grid-work__item">
-          <h2>Project Name 8</h2>
-          <img src="http://www.placepuppy.net/400/250">
-          <p>Scoop, banana toppings froyo popsicle popsicle snow cones froyo toppings cake cup apple cup. Sorbet, ice apple mint raspberry sorbet peppermint cookies and cream.</p>
-          <p><a href="#">View project</a>.</p>
-        </div>
-      </div> -->
-    </section>
+        </div>-->
+    </div>
+  </section>
 
-    <footer>
-      <p>Visit me on...</p>
-      <div class="footer__icons">
-        <a href="https://github.com/" target="_blank"><img src="images/icon-github.svg" alt="Github"></a>
-        <a href="https://twitter.com/" target="_blank"><img src="images/icon-twitter.svg" alt="Twitter"></a>
-        <a href="https://www.linkedin.com/" target="_blank"><img src="images/icon-linkedin.svg" alt="LinkedIn"></a>
-      </div>
-    </footer>
+  <footer>
+    <p>Visit me on...</p>
+    <div class="footer__icons">
+      <a href="https://github.com/" target="_blank"><img src="images/icon-github.svg" alt="Github"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="images/icon-twitter.svg" alt="Twitter"></a>
+      <a href="https://www.linkedin.com/" target="_blank"><img src="images/icon-linkedin.svg" alt="LinkedIn"></a>
+    </div>
+  </footer>
 
-    <script src="js/tota11y.min.js"></script>
-  </body>
+  <script src="js/tota11y.min.js"></script>
+</body>
+
 </html>
