--- a/work.html
+++ b/work.html
@@ -56,6 +56,14 @@
         <p><a href="https://github.com/Su3D/todo-app">code</a> || <a href="https://su3d.github.io/todo-app/">website</a>
         </p>
       </div>
+      <div class="grid-work__item">
+        <h2>mock meetup app</h2>
+        <img src="images/screenshot-meetup-app.png">
+        <p>Mock Meetup app built with React and uses the Meetup API and Amazon Web Services.</p>
+        <p><a href="https://github.com/Su3D/meetup-app">code</a> || <a
+            href="https://su3d.github.io/meetup-app/">website</a>
+        </p>
+      </div>
       <!--<div class="grid-work__item">
           <h2>Project Name 4</h2>
           <img src="http://www.placepuppy.net/400/250">
