--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
       <div class="grid-work__item">
         <h2>mock meetup app</h2>
         <img src="images/screenshot-meetup-app.png">
-        <p>Mock Meetup app built with React and uses the Meetup API and Amazon Web Services.</p>
+        <p>Mock Meetup app (&PWA) built with React. Uses the Meetup API and Amazon Web Services.</p>
         <p><a href="https://github.com/Su3D/meetup-app">code</a> || <a
             href="https://su3d.github.io/meetup-app/">website</a>
         </p>
