chat app update

--- a/work.html
+++ b/work.html
@@ -30,10 +30,10 @@
 
   <section id="main-content">
     <h1>My Work</h1>
-    <p>More projects to be added soon, please check back at a later date. Thank you.</p>
+    <p>More projects to be added, please continue to check back. Thank you.</p>
     <div class="grid-work">
       <div class="grid-work__item">
-        <h2>movie_api</h2>
+        <h2>movie api</h2>
         <img src="images/screenshot-movie-api.png">
         <p>A Movie API built using the MERN (MongoDB, Express, React, and Node.js) stack and will allow users to access
           information about a variety of movies, directors, ratings, and genres. Users are able to sign up, update their
@@ -42,14 +42,14 @@
             href="https://cf-movie-list-api.herokuapp.com/">website</a></p>
       </div>
       <div class="grid-work__item">
-        <h2>quiz-app</h2>
+        <h2>quiz app</h2>
         <img src="images/screenshot-quiz-app.png">
         <p>Small Quiz app built with Angular to test knowledge of Maths and French.</p>
         <p><a href="https://github.com/Su3D/quiz-app">code</a> || <a href="https://su3d.github.io/quiz-app/">website</a>
         </p>
       </div>
       <div class="grid-work__item">
-        <h2>todo-app</h2>
+        <h2>todo app</h2>
         <img src="images/screenshot-todo-app.png">
         <p>Small ToDo List app created with Vue.js that allows users to add, remove, edit, and mark as complete to-do
           list items.</p>
@@ -63,6 +63,13 @@
         <p><a href="https://github.com/Su3D/meetup-app">code</a> || <a
             href="https://su3d.github.io/meetup-app/">website</a>
         </p>
+      </div>
+      <div class="grid-work__item">
+        <h2>chat app</h2>
+        <img src="images/screenshot-chat-app.png">
+        <p>Chat Application using React-Native where users can login to send text messages including images from their device and share their location as well as customize the color of their screen.</p>
+        <p><a href="https://github.com/Su3D/chat-app">code</a> || <a
+          href="work-chat-app-ss.html">screenshots</a></p>
       </div>
       <!--<div class="grid-work__item">
           <h2>Project Name 4</h2>
